Javascript & Css Update

--- a/index.html
+++ b/index.html
@@ -14,12 +14,19 @@
 </head>
 <body>
 	
-	<h1>Crystals Collector!
-	</h1>
+	<div id="header"><h1>Crystals Collector!
+	</h1></div>
 
 
 	<div id="instructions">
-		You will be given a random #...
+		<p>You will be given a random, "Magic Number" at the start of the game.</p>
+		<p>There are four crystals below, By clicking on a crystal you will add a specific amount of of points to your total score.</p>
+		<p>You win the game by matching your total score to the Magic Number. However you loose the game if your score goes above the Magic Number.</p>
+		<p>Easy right? Here's the catch...</p>
+		<p>The value of each crystal is hidden from you until you click on it.</p>
+		<p>Click weary! At the start of each game the crystals value will change.</p>
+		
+
 	</div>
 
 	<div id="scoreboard">
